# morty

./: LICENSE.txt  README.md  pyproject.toml
morty/: main.py
morty/tests/: test_main.py
