[tool.poetry]
name = "morty"
version = "0.1.0"
description = ""
authors = ["Dan Wolf <dcwolf@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyside6 = "6.8.1"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
